<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/kundli" />
    <item
        android:id="@+id/kundliListFragment"
        android:icon="@android:drawable/star_on"
        android:title="@string/my_kundlis" />
    <item
        android:id="@+id/horoscopeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/horoscope" />
    <item
        android:id="@+id/compatibilityFragment"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/compatibility" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
